--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -57,3 +57,70 @@ rect.parent {
 .children:hover rect.child {
   fill: #bbb;
 }
+
+
+
+
+#sunburst{
+  position: relative;
+}
+
+
+#explanation {
+  position: relative;
+  top: 210px;
+  left: 235px;
+  width: 140px;
+  text-align: center;
+  color: #FFF;
+  z-index: 1000;
+}
+
+#percentage {
+  font-size: 2.5em;
+}
+input[type=range]:-moz-focusring{
+  outline: 1px solid white;
+  outline-offset: -1px;
+  
+}
+
+input[type=range]:focus::-moz-range-track {
+  background: #ccc;
+  
+}
+
+input[type=range]{
+    -webkit-appearance: none;
+    
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+    width: 300px;
+    height: 5px;
+    background: #ddd;
+    border: none;
+    border-radius: 3px;
+    
+}
+
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    border: none;
+    height: 16px;
+    width: 16px;
+    border-radius: 50%;
+    background: goldenrod;
+    margin-top: -4px;
+    
+}
+
+input[type=range]:focus {
+    outline: none;
+    
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #ccc;
+    
+}
