added video link

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -11,6 +11,9 @@
 			      <h1 style="color:white;text-align:center;font-size:50px">
 			      	  Intuitive Code Editor
 			        <small style="font-size:20px">: A visual code recommender</small>
+			       <a  target="_blank" href ="https://www.youtube.com/watch?v=TTAnl-NnEjQ" style="color:white;float:right">  
+			     	<small style="font-size:20px">Help <i class="fa fa-question-circle" aria-hidden="true"></i></small>
+			      </a>
 			      </h1>
 			      <hr>
 			   <!--    <ol class="breadcrumb">
@@ -65,7 +68,7 @@
 	    		<br />
 	    		<br />
 	    		<div class="row">
-		    		<div id="sidebar" class="col-sm-3">
+		    		<div id="sidebar" class="col-sm-3" style="color:#feb24c">
 					      <input type="checkbox" id="togglelegend" style="color:#feb24c;"> Legend<br/>
 					      <div id="legend" style="visibility: hidden;"></div>
 					</div>
@@ -79,7 +82,7 @@
 	    		 			</div>
 	    		 		</div>
 	    		 	</div>
-	    		 	<div id="sidebar-treemap" class="col-sm-3">
+	    		 	<div id="sidebar-treemap" class="col-sm-3" style="color:#feb24c">
 					      <input type="checkbox" id="togglelegend-treemap" style="color:#feb24c;"> Relevance<br/>
 					      <div id="legend-treemap" style="visibility: hidden;"></div>
 					</div>
